Fix mouse event coordinate computations with browser zoom.

LocalFrameView::DocumentToAbsolute expects unzoomed CSS pixels.  Two
call sites in MouseEvent are updated to use it correctly.

Bug: 810078
Change-Id: I8cfda651c6cd5d69d44e95af3321340b50068204
Reviewed-on: https://chromium-review.googlesource.com/908113
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535419}
Former-commit-id: 77d6ca1de73795626a71f6f3f69c73a2736738aa